# TokenMonitor

./: .gitignore  README.md  pyproject.toml
.cursor/: .review-prompted  review-queue.json
.mcp-index/: current.db
hooks/: record-usage.sh
src/token_monitor/: __init__.py  cli.py  hook_record.py  hook_script.py  paths.py  scanner.py  store.py
tests/: __init__.py  test_token_monitor.py
