[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-monitor"
version = "0.1.0"
description = "Monitor Cursor agent token usage and estimate static config overhead"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "tiktoken>=0.7.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
token-monitor = "token_monitor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/token_monitor"]
include = [
  "src/token_monitor/data/record-usage.sh",
]

[tool.hatch.build.targets.wheel.force-include]
"src/token_monitor" = "token_monitor"

[tool.pytest.ini_options]
testpaths = ["tests"]
